Issue : When the message cannot wrap to a new line, the width of the containing div extends, as shown in image above.
Fix : Set a maximum width of the containing div.

--- a/React/src/SidebarChat.css
+++ b/React/src/SidebarChat.css
@@ -5,6 +5,12 @@
     border-bottom: 1px solid #f6f6f6;
 }
 
+p {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    width: 20rem;
+}
 a {
     text-decoration: none !important;
     color: black;
